--- a/src/thewitcher.less
+++ b/src/thewitcher.less
@@ -1,5 +1,17 @@
-/* ------------------------------------ */
-/*				   Less					*/
-/* This is your Less entry file			*/
-/* ------------------------------------ */
+// Import utilities
+@import "styles/utils/_typography";
+@import "styles/utils/_mixins";
+@import "styles/utils/_variables";
+
+// Global Styles
+@import "styles/global/_window";
+@import "styles/global/_grid";
+@import "styles/global/_flex";
+
+// System specific files
+.thewitcher {
+
+}
+
+
 
