--- a/src/thewitcher.less
+++ b/src/thewitcher.less
@@ -10,7 +10,9 @@
 
 // System specific files
 .thewitcher {
+  @import "styles/components/_forms";
 
+  @import "styles/components/actor-sheet";
 }
 
 
