--- a/src/templates/actor/actor-sheet.hbs
+++ b/src/templates/actor/actor-sheet.hbs
@@ -1,10 +1,20 @@
 <form class="{{cssClass}} flexcol" autocomplete="off">
     {{!-- Sheet Header --}}
-    <header class="sheet-header">
-        <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="100" width="100" />
-        <div class="header-fields">
-            <h1 class="charname"><input name="name" type="text" value="{{actor.value}}" placeholder="{{localize "THEWITCHER.actor_sheet.name"}}></h1>
-        </div>
+    <header class="sheet-header flex-gap">
+        {{> "systems/thewitcher/templates/actor/parts/sheet-header.hbs"}}
     </header>
 
+    {{!-- Sheet Tab Navigation --}}
+    <nav class="sheet-tabs tabs" data-group="primary">
+        <a class="item" data-tab="skills">Skills</a>
+        <a class="item" data-tab="items">Gears & Inventory</a>
+        <a class="item" data-tab="items">Profession Skills</a>
+        <a class="item" data-tab="items">Magic & Spells</a>
+        <a class="item" data-tab="items">Life path</a>
+    </nav>
+
+    {{!-- Sheet Body --}}
+    <section class="sheet-body">
+        content
+    </section>
 </form>
