implement actor skills

--- a/src/styles/components/_forms.less
+++ b/src/styles/components/_forms.less
@@ -1,7 +1,3 @@
-.window-content {
-  background: @sheet-background;
-}
-
 input[type="text"],
 input[type="number"],
 select {
@@ -9,6 +5,7 @@ select {
   box-shadow: inset 0 0 10px darkgray;
   background: whitesmoke;
   border-radius: unset;
+  text-align: center;
 }
 
 
