--- a/src/styles/components/actor-sheet.less
+++ b/src/styles/components/actor-sheet.less
@@ -21,7 +21,7 @@
     }
 
     input {
-      width: 20px;
+      max-width: 35px;
     }
 
     .abilities-title {
@@ -30,6 +30,8 @@
       text-transform: uppercase;
       text-align: right;
       margin-right: 16px;
+
+      .rollable();
     }
   }
 
