--- a/src/templates/actor/actor-sheet.hbs
+++ b/src/templates/actor/actor-sheet.hbs
@@ -8,13 +8,45 @@
     <nav class="sheet-tabs tabs" data-group="primary">
         <a class="item" data-tab="skills">Skills</a>
         <a class="item" data-tab="items">Gears & Inventory</a>
-        <a class="item" data-tab="items">Profession Skills</a>
-        <a class="item" data-tab="items">Magic & Spells</a>
-        <a class="item" data-tab="items">Life path</a>
+        <a class="item" data-tab="profession">Profession Skills</a>
+        <a class="item" data-tab="spells">Magic & Spells</a>
+        <a class="item" data-tab="lifepath">Life path</a>
     </nav>
 
     {{!-- Sheet Body --}}
     <section class="sheet-body">
-        content
+
+        {{!-- Skills Tab--}}
+        <div class="tab skills" data-group="primary" data-tab="skills">
+            <div class="grid grid-3col">
+                <div class="skills-col" >
+
+                    {{!-- Intelligence Skills --}}
+                    {{> "systems/thewitcher/templates/actor/parts/actor-skill-list-table.hbs" abilityId="int" skills=data.skills.int}}
+
+                    {{!-- Reflex Skills --}}
+                    {{> "systems/thewitcher/templates/actor/parts/actor-skill-list-table.hbs" abilityId="ref" skills=data.skills.ref}}
+                </div>
+
+                <div class="skills-col">
+                    {{!-- Dexterity Skills --}}
+                    {{> "systems/thewitcher/templates/actor/parts/actor-skill-list-table.hbs" abilityId="dex" skills=data.skills.dex}}
+
+                    {{!-- Body Skills --}}
+                    {{> "systems/thewitcher/templates/actor/parts/actor-skill-list-table.hbs" abilityId="body" skills=data.skills.body}}
+
+                    {{!-- Empathy Skills --}}
+                    {{> "systems/thewitcher/templates/actor/parts/actor-skill-list-table.hbs" abilityId="emp" skills=data.skills.emp}}
+                </div>
+
+                <div class="skills-col">
+                    {{!-- Craft Skills --}}
+                    {{> "systems/thewitcher/templates/actor/parts/actor-skill-list-table.hbs" abilityId="cra" skills=data.skills.cra}}
+
+                    {{!-- Will Skills --}}
+                    {{> "systems/thewitcher/templates/actor/parts/actor-skill-list-table.hbs" abilityId="will" skills=data.skills.will}}
+                </div>
+            </div>
+        </div>
     </section>
 </form>
