--- a/src/thewitcher.less
+++ b/src/thewitcher.less
@@ -10,8 +10,8 @@
 
 // System specific files
 .thewitcher {
+  @import "styles/components/apps";
   @import "styles/components/_forms";
-
   @import "styles/components/actor-sheet";
 }
 
