--- a/src/templates/actor/parts/actor-skill-list-table.hbs
+++ b/src/templates/actor/parts/actor-skill-list-table.hbs
@@ -1,5 +1,5 @@
-<table class="skill-list">
-    <thead>
+<table class="skills">
+    <thead class="skills-title">
     <tr>
         <td colspan="3" data-ability-id="{{abilityId}}">{{ localizeAbility abilityId }}</td>
     </tr>
@@ -11,20 +11,18 @@
     </thead>
     <tbody>
     {{#each skills as |skill id|}}
-        <tr class="item" data-ability="int">
-            <td class="skill-name" data-ability-id="{{skill.abilityId}}" data-skill-id="{{id}}">{{localize skill.label}}</td>
-            <td>
+        <tr class="item" data-ability-id="{{skill.abilityId}}" data-skill-id="{{id}}">
+            <td class="skill-name">{{localize skill.label}}</td>
+            <td class="skill-field">
                 <input name="data.skills.{{skill.abilityId}}.{{id}}.value"
                        type="number" value="{{skill.value}}"
                        data-dtype="Number"/>
             </td>
-            <td>
+            <td class="skill-field rollable">
                 <input name="data.skills.{{skill.abilityId}}.{{id}}.total"
                        type="number" value="{{skill.total}}" disabled
                        data-dtype="Number"/>
-
             </td>
-
         </tr>
     {{/each}}
     </tbody>
