--- a/src/styles/components/apps.less
+++ b/src/styles/components/apps.less
@@ -14,5 +14,8 @@ section.sheet-body {
   .tab {
     overflow-x: hidden;
     overflow-y: overlay;
+    flex-basis: 100%;
+    padding: 5px 10px;
+    //background: rgba(0,0,0,0.05);
   }
 }
