--- a/src/styles/utils/_mixins.less
+++ b/src/styles/utils/_mixins.less
@@ -14,3 +14,10 @@
 .hide {
   display: none;
 }
+
+.d10 {
+  background-image: url("/icons/svg/d10-grey.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
