--- a/src/templates/actor/parts/sheet-header.hbs
+++ b/src/templates/actor/parts/sheet-header.hbs
@@ -56,7 +56,7 @@
     <div class="flexrow flex-group-left">
         <div class="form-group">
             <label for="actor-details-profession">{{localize "THEWITCHER.actor.profession_abbr"}}</label>
-            <input name="data.details.profession" type="text" value="{{data.details.profession}}"
+            <input name="data.profession.name" type="text" value="{{data.profession.name}}"
                    id="actor-details-profession"/>
         </div>
         <div class="form-group">
