some adjusts for implement initial npc sheet

--- a/src/styles/components/actor-sheet.less
+++ b/src/styles/components/actor-sheet.less
@@ -3,6 +3,7 @@
 &.sheet {
   .sheet-header {
     img.token {
+      align-self: center;
       width: 200px;
       height: 200px;
       margin-bottom: 20px;
@@ -14,7 +15,6 @@
 
   .basic-details {
   }
-
 
   .abilities, .derived-abilities, .skills {
     label {
