--- a/src/thewitcher.less
+++ b/src/thewitcher.less
@@ -13,6 +13,7 @@
   @import "styles/components/apps";
   @import "styles/components/_forms";
   @import "styles/components/actor-sheet";
+  @import "styles/components/item-sheet";
 }
 
 
