--- a/src/templates/item/parts/description.hbs
+++ b/src/templates/item/parts/description.hbs
@@ -11,7 +11,7 @@
         </div>
     {{/if}}
 
-    <div class="form-group">
+    <div class="form-group flexrow">
         <label for="item_cost">{{ localize "THEWITCHER.item_sheet.cost" }}</label>
         <input type="number" id="item_cost" name="data.cost" value="{{data.cost}}" data-dtype="Number"/>
     </div>
