--- a/src/styles/components/apps.less
+++ b/src/styles/components/apps.less
@@ -13,11 +13,16 @@ form {
   height: 100%;
   overflow-y: auto;
   align-content: flex-start;
-  padding: 5px 10px;
+  padding: 0 10px 10px;
 }
 
-nav.sheet-tabs {
+.sheet-tabs {
+  border-bottom: none;
 
+  .item.active {
+    background: rgba(0,0,0,0.1);
+    margin-bottom: -3px;
+  }
 }
 
 .sheet-header {
