--- a/src/styles/components/item-sheet.less
+++ b/src/styles/components/item-sheet.less
@@ -132,8 +132,4 @@
 /*  Loot Sheet (No Tabs)                     */
 /* ----------------------------------------- */
 
-.loot-header {
-  margin-bottom: 10px;
-
-
-}
+.loot-header { margin-bottom: 10px; }
