--- a/src/thewitcher.less
+++ b/src/thewitcher.less
@@ -12,6 +12,7 @@
 .thewitcher {
   @import "styles/components/apps";
   @import "styles/components/_forms";
+  @import "styles/components/sheet";
   @import "styles/components/actor-sheet";
   @import "styles/components/item-sheet";
 }
