--- a/src/styles/components/apps.less
+++ b/src/styles/components/apps.less
@@ -27,12 +27,15 @@ form {
 
 .sheet-header {
   max-height: fit-content;
+  border-bottom: @borderGroove;
+  padding-bottom: 4px;
 }
 
 .sheet-body {
   flex: 1;
   overflow: hidden;
   background: rgba(0,0,0,0.1);
+  padding: 0 5px;
 }
 
 .items-list {
